CB-23190 EDH integration for Flexible Server
- added new usage proto file
- DL database type is sent now to core and stored in a separate field
- usage: `CDPDatabaseDetails` is populated with DB info which present in `CDPClusterDetails`